Fix layout issue on remote access tracks

--- a/buildsystem/network-sharing-server/src/scss/app.scss
+++ b/buildsystem/network-sharing-server/src/scss/app.scss
@@ -281,6 +281,7 @@ body {
 
 .media-list .media-img-container {
   width: 54px;
+  height: 54px;
 }
 
 .media-list .media-img-container.video {
